# ptit-biscuit

./: Cargo.toml  README.md  debug.txt  perft.sh  run-debug.sh
src/: bmi_features.rs  chess.rs  eval.rs  lookup.rs  main.rs  perft.rs  search.rs  searchTools.rs  search_tools.rs  table_transposition.rs  uci.rs  zedzeda.rs  zobrist.rs
