[package]
name = "ptit-biscuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
#minstant = "0.1.2"
bitintr = "0.3.0"
rand_xorshift = "0.3.0"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip=true
panic = 'abort'

[profile.dev]
overflow-checks = false

[profile.perf-debug]
inherits = "release"
lto = true
strip=false

#[target.'cfg(not(target_env = "msvc"))'.dependencies]
#    tikv-jemallocator = "0.5"